css/theme.css
/* ... */
.theme-help-box-description {overflow: hidden; }

/* ----------------------- */
/* Anchors and buttons     */
/* ----------------------- */

.btn {
  -webkit-box-shadow: none !important;
  -moz-box-shadow: none !important;
  box-shadow: none !important;
  font-family: 'Arial' !important;
}
.btn .caret {
	margin-left: 5px;
}
.btn-xs {
  font-size: 11px;
}
.btn-link, a {
  color: #999999;
}
a:hover, a:focus {
  color: #999999;
}
.btn-primary, .btn-primary.disabled {
  background-color: #999999;
  border-color: #868686;
}
.btn-secondary {
  background-color: #e0e0e0;
  border-color: #e0e0e0;
  color: #333333;
}
.btn-secondary:hover {
  background-color: #ebebeb;
  border-color: #ebebeb;
}
.dropdown-menu-right {
  right: 0;
  left: auto;
}
.dropdown-menu >li > a {
  font-size: 12px;
  color: #686868;
  white-space: normal;
}
.dropdown-menu >li > a .fa{margin-right: 3px;}

.theme-icon-text-spacing {
  padding-right: 5px;
}
.theme-text-icon-spacing {
  padding-left: 5px;
}

/* ----------------------- */
/* Fields                  */
/* ----------------------- */

.form-control {
  height: auto;
  min-height: 34px;
}
span.form-control.theme-control-no-border, input.form-control.theme-control-no-border {
  background: transparent;
  border: none;
  webkit-box-shadow: none;
  box-shadow: none;
}
.form-control.theme-sidebar-search:focus {
  border-color: #fafafa !important;
}
.theme-field-right input[type=checkbox] {
  width: 34px;
  height: 24px;
  margin-top: 0px;
}
.theme-errmsg-separator {
  margin: 20px 20px 0px 20px;
}
.theme-validation-error {
  color: red;
  font-size: 11px;
}

span.form-control { background: #eee; box-shadow: none; cursor: not-allowed;}

/* ----------------------- */
/* Filter                  */
/* ----------------------- */
.dataTables_filter > label {
  width: 100%;
}
.dataTables_filter > label > input.form-control {
  width: 100%;
}

/* ----------------------- */
/* Pagination              */
/* ----------------------- */
.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus {
  background-color: #999999;
  border-color: #999999;
}
.pagination > li > a, .pagination > li > span {
  color: #999999;
}
.theme-paginate-button {
  font-size: 1.6em;
  line-height: 20px;
}
.dataTables_paginate.paging_simple_numbers ul.pagination {
  float: right;
  margin: 0px;
}

/* ----------------------- */
/* Radio buttons and sets  */
/* ----------------------- */

.theme-radioset input {
  width: 30px;
  float: left;
}
.theme-radioset label {
  padding-left: 10px;
}
.theme-radioset p {
  margin-left: 40px;
}
.theme-field-radio-set div {
  padding-top: 4px;
  padding-bottom: 4px;
}
.theme-field-radio-set input[type=radio] {
  margin-right: 6px;
}

/* ----------------------- */
/* Progress bars           */
/* ----------------------- */

.progress-bar {
  background-color: #999999;
}
.theme-progress-bar-no-animation {
  -webkit-transition: none;
  -moz-transition: none;
  -ms-transition: none;
  -o-transition: none;
  transition: none;
}
.theme-field-right > div.progress {
  margin-bottom: 0px;
  height: 34px;
}

/* ----------------------- */
/* Login form              */
/* ----------------------- */

.theme-login-container {
  width: 80%;
  margin-left: auto;
  margin-right: auto;
  position: relative;
  padding-top: 10%;
}

/* ----------------------- */
/* 2FA auth form  */
/* ----------------------- */

.theme-2fa-container {
  width: 80%;
  margin-left: auto;
  margin-right: auto;
  position: relative;
  padding-top: 5%;
}

/* ----------------------- */
/* Sidebar widget FIXME - discuss */
/* ----------------------- */

/* ----------------------- */
/* Charts                  */
/* ----------------------- */

.theme-chart-container {
  width: 100%;
  height: 100px;
}
.theme-chart-xs {
  height: 50px;
}
.theme-chart-small {
  height: 100px;
}
.theme-chart-medium {
  height: 200px;
}
.theme-chart-large {
  height: 350px;
}
.theme-chart-container .legendColorBox {
  padding-left: 5px;
}
.theme-chart-label-format {
  border:1px;
  solid #ccc;
  border-radius: 5px;
  font-size:8pt;
  text-align:center;
  padding:3px 10px;
  color:white;
  background-color: rgba(0,0,0,0.2);
}
.pieLabel {
  color: white;
}
.legendLabel {
  padding-left: 5px;
  padding-right: 5px;
}

/* ----------------------- */
/* Daemons                 */
/* ----------------------- */

.theme-stopped-daemon, .theme-dead-daemon{
  color: red;
}
.theme-daemon-start-stop-status {
  margin-right: 5px;
}

/* ----------------------- */
/* Breadcrumb              */
/* ----------------------- */

.theme-breadcrumb {
  float: left;
}
.theme-breadcrumb-links {
  float: right;
  font-size: 1.7em;
  padding-right: 15px;
  margin-top: 18px;
}
.theme-breadcrumb-links a {
  color: #ffffff !important;
  display: inline-block;
  font-size: 30px;
  padding: 6px 0px 0;
  margin-left: 10px;
}

/* ----------------------- */
/* Tables                  */
/* ----------------------- */

.theme-box-tools {
  margin-top: -15px;
}

.box-header > div.theme-box-tools.pull-right {
  position: relative;
  z-index: 20;
}
.box-header > h3.box-title {
  position: relative;
  z-index: 10;
}

.table-striped > tbody > tr:nth-child(2n) > td, .table-striped > tbody > tr:nth-child(2n) > th { background-color: #ffffff;}
.table-striped > tbody > tr:nth-child(odd) > td, .table-striped > tbody > tr:nth-child(odd) > th { background-color: #f4f4f4;}

table.dataTable tr.child span.dtr-title {
  margin-right: 10px;
}
table.dataTable.my-responsive.dtr-inline.collapsed tbody td:first-child:before, table.dataTable.my-responsive.dtr-inline.collapsed tbody th:first-child:before {
  color: #686868;
  content: '\f142';
  font-family: 'FontAwesome';
  border: none;
  background-color: transparent;
  box-shadow: none;
  width: 4px;
  line-height: inherit !important;
}
/* ... */

